Fixing header left alignment

--- a/sass/styles/header.scss
+++ b/sass/styles/header.scss
@@ -280,7 +280,7 @@ header {
   &.bottomleft {
     padding:300px 0 0 0;
     .main-heading h1 {
-      margin: 0 0 0 20px;
+      margin: 0 0 0 10px;
     }
   }
   &.center {
