--- a/styles.css
+++ b/styles.css
@@ -5554,7 +5554,7 @@ header input[type='text'] {
   padding: 300px 0 0 0;
 }
 .featured-top-image.bottomleft .main-heading h1 {
-  margin: 0 0 0 20px;
+  margin: 0 0 0 10px;
 }
 .featured-top-image.center {
   padding: 150px 0;
